src/css/Title.css
.title {
  grid-area: title;
  display: grid;
  width: 100%;
  max-width: 700px;
  grid-template-columns: 1;
  grid-template-rows: 1;
  justify-content: center;
  align-content: center;
}

.title h1 {
  color: var(--secondary-color);
  width: fit-content;
  display: grid;
  justify-items: center;
}

.title h1:after {
  display: block;
  width: 150%;
  content: "";
  transform: rotate(-1deg);
  height: 10px;
  background: var(--primary-color);
  box-shadow: -3px 4px 0 rgba(0, 0, 0, 0.2);
}

@media (max-width: 700px) {
  .title {
    padding: 10px;
  }
}

@media (max-width: 500px) {
  .title h1:after {
    width: 100%;
  }
}

